--- a/index.html
+++ b/index.html
@@ -48,19 +48,25 @@
 
 <div class="container2">
 <div class="card">
-<div class="restaurant">
-        <img src="images\fl2jane.jpg" width="250" height="200" alt="">
-        <h4>Jane</h4>
+<div class="service">
+        <h4>Réserver un bouquet</h4>
       </div>
 
-      <div class="restaurant">
-        <img src="images\fl1.jpg" width="300" height="200"alt="">
-        <h4>Carofleur</h4>
+      <div class="service">
+        <h4>Composer un bouquet</h4>
       </div>
 
     </div>
     </div>
   <div>
 
+  <div class="histoire">
+    <h3>Notre histoire</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+  </div>
+
+<div class="footer">
+  <p> Website made with love</p>
+</div>
 </body>
 </html>
